@startuml

enum org.ghostnets.RecoveryStatus {
+  VERSCHOLLEN
+  GEBORGEN
+  GEMELDET
+  BERGUNG_BEVORSTEHEND
}

class org.ghostnets.Net {
- int id
- int size
- RecoveryStatus recoveryStatus
- List<Sighting> sightings
- Recoverer recoveredBy
+ <<Create>> Net()
+ <<Create>> Net(int,RecoveryStatus)
+ Sighting getMostRecentSighting()
+ double getMostRecentLat()
+ double getMostRecentLong()
+ void addSighting(Sighting)
+ String toString()
+ Recoverer getRecoveredBy()
+ void setRecoveredBy(Recoverer)
+ long getId()
+ int getSize()
+ void setSize(int)
+ void setRecoveryStatus(RecoveryStatus)
+ RecoveryStatus getRecoveryStatus()
+ void setRecoverer(Recoverer)
+ List<Sighting> getSightings()
+ void setSightings(List<Sighting>)
}



class org.ghostnets.SightingController {
- {static} EntityManagerFactory emf
- int netId
- Report report
- Net net
+ <<Create>> SightingController()
+ void initController()
- {static} EntityManagerFactory getEmf()
+ void registerNewSighting()
+ int getNetId()
+ Net getNet()
+ Report getReport()
+ void setReport(Report)
}


class org.ghostnets.Recoverer {
- long id
- String firstName
- String lastName
- String mailAddress
+ <<Create>> Recoverer()
+ <<Create>> Recoverer(String,String)
+ <<Create>> Recoverer(String,String,String)
+ String getFirstName()
+ void setFirstName(String)
+ String getLastName()
+ void setLastName(String)
+ String getMailAddress()
+ void setMailAddress(String)
+ long getId()
}


class org.ghostnets.ReportController {
- {static} EntityManagerFactory emf
- Report report
+ <<Create>> ReportController()
+ void initController()
- {static} EntityManagerFactory getEmf()
+ void saveNewNet()
+ {static} ArrayList<Net> loadNets()
+ Report getReport()
+ void setReport(Report)
}


class org.ghostnets.RecoveryController {
- {static} EntityManagerFactory emf
- int netId
- Net net
- Recoverer recoverer
+ <<Create>> RecoveryController()
+ void initController()
- {static} EntityManagerFactory getEmf()
+ void setRecoveryStatusInProgress()
+ int getNetId()
+ Net getNet()
+ Recoverer getRecoverer()
}


class org.ghostnets.Sighting {
+ Long id
- LocalDateTime timestamp
- double longitude
- double latitude
- Recoverer reporter
- Net net
+ <<Create>> Sighting()
+ <<Create>> Sighting(LocalDateTime,float,float,Recoverer)
+ <<Create>> Sighting(LocalDateTime,float,float,Recoverer,Net)
+ Long getId()
+ void setId(Long)
+ LocalDateTime getTimestamp()
+ void setTimestamp(LocalDateTime)
+ double getLongitude()
+ void setLongitude(double)
+ double getLatitude()
+ void setLatitude(double)
+ Recoverer getReporter()
+ void setReporter(Recoverer)
+ Net getNet()
+ void setNet(Net)
}


class org.ghostnets.Report {
- int size
- Net.RecoveryStatus recoveryStatus
- LocalDateTime timestamp
- double longitude
- double latitude
- String firstName
- String lastName
- String mailAddress
+ <<Create>> Report()
+ int getSize()
+ void setSize(int)
+ Net.RecoveryStatus getRecoveryStatus()
+ void setRecoveryStatus(Net.RecoveryStatus)
+ LocalDateTime getTimestamp()
+ void setTimestamp(LocalDateTime)
+ double getLongitude()
+ void setLongitude(double)
+ double getLatitude()
+ void setLatitude(double)
+ String getFirstName()
+ void setFirstName(String)
+ String getLastName()
+ void setLastName(String)
+ void setMailAddress(String)
+ String getMailAddress()
}


class org.ghostnets.OverviewController {
- {static} EntityManagerFactory emf
- ArrayList<Net> nets
- MapModel mapModel
- Marker selectedMarker
- Net selectedNet
+ <<Create>> OverviewController()
+ void initController()
+ void onMarkerSelect(OverlaySelectEvent)
+ void setRecoveryStatusRecovered()
+ void setRecoveryStatusDisappeared()
+ String getSightingUrl()
- {static} EntityManagerFactory getEmf()
+ void addNet(Net)
+ {static} ArrayList<Net> loadNets()
+ String convertStatusToString(Net.RecoveryStatus)
+ void generateAndLoad()
+ String getRecoveryUrl()
+ void generateRandNet()
- MapModel generateMapModel()
+ String getNetMarkerText(Net)
+ void reloadNets()
+ Net getSelectedNet()
+ void setSelectedNet(Net)
+ Marker getSelectedMarker()
+ void setSelectedMarker(Marker)
+ MapModel getMapModel()
+ void setMapModel(MapModel)
+ ArrayList<Net> getNets()
}




java.io.Serializable <|.. org.ghostnets.Net
java.io.Serializable <|.. org.ghostnets.SightingController
java.io.Serializable <|.. org.ghostnets.Recoverer
java.io.Serializable <|.. org.ghostnets.ReportController
java.io.Serializable <|.. org.ghostnets.RecoveryController
java.io.Serializable <|.. org.ghostnets.Report
java.io.Serializable <|.. org.ghostnets.OverviewController
@enduml